second assignment updated

--- a/index.html
+++ b/index.html
@@ -1,46 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Developer Profile</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
-    <header>
-        <h1>My Developer Profile</h1>
-        <p>Aspiring Full Stack Developer</p>
-    </header>
+  <!-- Header Section -->
+  <header class="hero">
+    <h1 class="glow">Hi, I'm Prajju</h1>
+    <p>Web Developer | Creative Designer | Learner</p>
+    <a href="#projects" class="btn">View My Work</a>
+  </header>
 
-    <section class="about">
-        <h2>About Me</h2>
-        <p>
-            Hi, I am Prajwal. I am learning full stack web development and building
-            projects using HTML, CSS, JavaScript, Git, and GitHub.
-            This is my first internship task and personal developer profile website.
-        </p>
-    </section>
+  <!-- About Section -->
+  <section class="about">
+    <h2>About Me</h2>
+    <div class="about-container">
+      <p>
+        I am a passionate web developer who loves building modern,
+        responsive, and interactive websites using HTML5, CSS3,
+        and JavaScript.
+      </p>
+      <p>
+        I focus on clean UI, smooth animations, and great user experience.
+      </p>
+    </div>
+  </section>
 
-    <section class="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>HTML5</li>
-            <li>CSS3</li>
-            <li>JavaScript (Basics)</li>
-            <li>Git & GitHub</li>
-            <li>Python (Basics)</li>
-        </ul>
-    </section>
+  <!-- Projects Section -->
+  <section id="projects" class="projects">
+    <h2>My Projects</h2>
+    <div class="project-container">
+      <div class="card">
+        <h3>Portfolio Website</h3>
+        <p>Responsive portfolio using Flexbox and animations.</p>
+      </div>
+      <div class="card">
+        <h3>Landing Page</h3>
+        <p>Modern landing page with smooth hover effects.</p>
+      </div>
+      <div class="card">
+        <h3>Blog UI</h3>
+        <p>Minimal blog layout with clean typography.</p>
+      </div>
+    </div>
+  </section>
 
-    <section class="projects">
-        <h2>Projects</h2>
-        <p>More projects coming soon...</p>
-    </section>
-
-    <footer>
-        <p>© 2026 Prajwal | Developer Profile</p>
-    </footer>
+  <!-- Footer Section -->
+  <footer class="footer">
+    <p>© 2026 Prajwal | Built with ❤️ using HTML & CSS</p>
+  </footer>
 
 </body>
 </html>
